--- a/gallery/config_test.yaml
+++ b/gallery/config_test.yaml
@@ -34,7 +34,7 @@ spec:
     spec:
       containers:
       - name: gallery-test
-        image: gesiscss/binder-gallery:c35a16a
+        image: gesiscss/binder-gallery:68ae8d7
         command: ["gunicorn"]
         args: ["-b", "0.0.0.0:5000", "-w", "4", "binder_gallery:app"]
         ports:
@@ -42,7 +42,7 @@ spec:
           protocol: TCP
         env:
         - name: FLASK_ENV
-          value:  "production"
+          value:  "development"
         - name: BG_BASE_URL
           value:  "/gallery/"
         - name: BG_APPLICATION_SETTINGS
