--- a/orc_site/deploy/orc-site-app.yaml
+++ b/orc_site/deploy/orc-site-app.yaml
@@ -34,7 +34,7 @@ spec:
     spec:
       containers:
       - name: orc-site
-        image: gesiscss/orc-site:e4ee02c
+        image: gesiscss/orc-site:6f77468
         command: ["gunicorn"]
         args: ["-b", "0.0.0.0:5000", "-w", "16", "orc_site.app:app"]
         ports:
@@ -43,6 +43,8 @@ spec:
         env:
         - name: FLASK_ENV
           value:  "production"
+        - name: FLASK_SERVER_NAME
+          value:  "notebooks.gesis.org"
         resources:
           requests:
             cpu: "0.25"
