--- a/gallery/config.yaml
+++ b/gallery/config.yaml
@@ -34,7 +34,7 @@ spec:
     spec:
       containers:
       - name: gallery
-        image: gesiscss/binder-gallery:68ae8d7
+        image: gesiscss/binder-gallery:4a673b7
         command: ["gunicorn"]
         args: ["-b", "0.0.0.0:5000", "-w", "16", "binder_gallery:app"]
         ports:
@@ -47,6 +47,8 @@ spec:
           value:  "/gallery/"
         - name: BG_APPLICATION_SETTINGS
           value:  "gallery_config.Config"  # _secret_config.py
+        - name: PRODUCTION_SERVER
+          value: "true"
         resources:
           requests:
             cpu: "0.25"
