--- a/orc_site/deploy/orc-site-app.yaml
+++ b/orc_site/deploy/orc-site-app.yaml
@@ -34,7 +34,7 @@ spec:
     spec:
       containers:
       - name: orc-site
-        image: gesiscss/orc-site:6f77468
+        image: gesiscss/orc-site:b845b9b
         command: ["gunicorn"]
         args: ["-b", "0.0.0.0:5000", "-w", "16", "orc_site.app:app"]
         ports:
@@ -45,6 +45,8 @@ spec:
           value:  "production"
         - name: FLASK_SERVER_NAME
           value:  "notebooks.gesis.org"
+        - name: PRODUCTION_SERVER
+          value: "true"
         resources:
           requests:
             cpu: "0.25"
