use default logging. make gunicorn log into stdout and stderr

--- a/orc_site/Dockerfile
+++ b/orc_site/Dockerfile
@@ -29,6 +29,6 @@ EXPOSE 5000
 # run the application
 CMD ["python", "-m", "orc_site"]
 # run the application behind Gunicorn WSGI HTTP Server
-#CMD ["gunicorn", "-b", "0.0.0.0:5000", "orc_site.app:app"]
+#CMD ["gunicorn", "--log-file=-", "--error-logfile=-", "--access-logfile=-", "-b", "0.0.0.0:5000", "orc_site.app:app"]
 # run the application behind Gunicorn WSGI HTTP Server with 4 worker processes
-#CMD ["gunicorn", "-b", "0.0.0.0:5000", "-w", "4", "orc_site.app:app"]
+#CMD ["gunicorn", "--log-file=-", "--error-logfile=-", "--access-logfile=-", "-b", "0.0.0.0:5000", "-w", "4", "orc_site.app:app"]
