--- a/gallery/config.yaml
+++ b/gallery/config.yaml
@@ -34,9 +34,9 @@ spec:
     spec:
       containers:
       - name: gallery
-        image: gesiscss/binder-gallery:4a673b7
+        image: gesiscss/binder-gallery:ca2b44b
         command: ["gunicorn"]
-        args: ["-b", "0.0.0.0:5000", "-w", "16", "binder_gallery:app"]
+        args: ["--log-file=-", "--error-logfile=-", "--access-logfile=-", "-b", "0.0.0.0:5000", "-w", "16", "binder_gallery:app"]
         ports:
         - containerPort: 5000
           protocol: TCP
