--- a/nginx_shibboleth/nginx/k8s_test.conf
+++ b/nginx_shibboleth/nginx/k8s_test.conf
@@ -119,7 +119,7 @@ server {
         proxy_set_header   X-Forwarded-Proto    $scheme;
     }
     # binder gallery
-    location /gallery/ {
+    location /gallery {
         proxy_pass http://gallery;
         proxy_redirect     off;
 
