--- a/nginx_shibboleth/nginx/k8s_test.conf
+++ b/nginx_shibboleth/nginx/k8s_test.conf
@@ -13,9 +13,9 @@ upstream orc-site {
 }
 
 upstream gallery {
-  server 194.95.75.9:30179;
-  server 194.95.75.10:30179;
-  server 194.95.75.12:30179;
+  server 194.95.75.9:30172;
+  server 194.95.75.10:30172;
+  server 194.95.75.12:30172;
 }
 
 upstream jhub {
@@ -119,7 +119,7 @@ server {
         proxy_set_header   X-Forwarded-Proto    $scheme;
     }
     # binder gallery
-    location /gallery {
+    location /gallery/ {
         proxy_pass http://gallery;
         proxy_redirect     off;
 
