--- a/nginx_shibboleth/nginx/k8s_test.conf
+++ b/nginx_shibboleth/nginx/k8s_test.conf
@@ -12,7 +12,7 @@ upstream orc-site {
   server 194.95.75.12:30178;
 }
 
-upstream gallery {
+upstream gallery-app {
   server 194.95.75.9:30172;
   server 194.95.75.10:30172;
   server 194.95.75.12:30172;
@@ -120,7 +120,7 @@ server {
     }
     # binder gallery
     location /gallery/ {
-        proxy_pass http://gallery;
+        proxy_pass http://gallery-app;
         proxy_redirect     off;
 
         proxy_set_header   Host                 $host;
