revert last tries and fix gallery service

--- a/nginx_shibboleth/nginx/k8s_test.conf
+++ b/nginx_shibboleth/nginx/k8s_test.conf
@@ -12,10 +12,10 @@ upstream orc-site {
   server 194.95.75.12:30178;
 }
 
-upstream gallery-app {
-  server 194.95.75.9:30172;
-  server 194.95.75.10:30172;
-  server 194.95.75.12:30172;
+upstream gallery {
+  server 194.95.75.9:30179;
+  server 194.95.75.10:30179;
+  server 194.95.75.12:30179;
 }
 
 upstream jhub {
@@ -120,7 +120,7 @@ server {
     }
     # binder gallery
     location /gallery/ {
-        proxy_pass http://gallery-app;
+        proxy_pass http://gallery;
         proxy_redirect     off;
 
         proxy_set_header   Host                 $host;
