--- a/gallery/config_test.yaml
+++ b/gallery/config_test.yaml
@@ -7,13 +7,13 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: gallery
+    app: gallery-test
   ports:
   - name: "http"
     protocol: TCP
     port: 5000
     targetPort: 5000
-    nodePort: 30172
+    nodePort: 30179
 ---
 apiVersion: apps/v1
 kind: Deployment
