fix ci for gallery

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,7 +89,10 @@ deploy_staging:
       if git diff HEAD~ --name-only | egrep 'orc_site/deploy/orc-site-app-test.yaml'; then
         mode+="-orctestsite"
       fi;
-      if git diff HEAD~ --name-only | egrep 'gallery/config_test.yaml|gallery/_secret_config_test.py'; then
+      if git diff HEAD~ --name-only | egrep 'gallery/_secret_config_test.py'; then
+        mode+="-gallerytestconf"
+      fi;
+      if git diff HEAD~ --name-only | egrep 'gallery/config_test.yaml'; then
         mode+="-gallerytestapp"
       fi;
       if git diff HEAD~ --name-only | egrep 'jupyterhub/config_test.yaml|jupyterhub/_secret_test.yaml'; then
@@ -130,7 +133,10 @@ deploy_prod:
       if git diff HEAD~ --name-only | egrep 'orc_site/deploy/orc-site-app.yaml'; then
         mode+="-orcsite"
       fi;
-      if git diff HEAD~ --name-only | egrep 'gallery/config.yaml|gallery/_secret_config.py'; then
+      if git diff HEAD~ --name-only | egrep 'gallery/_secret_config.py'; then
+        mode+="-galleryconf"
+      fi;
+      if git diff HEAD~ --name-only | egrep 'gallery/config.yaml'; then
         mode+="-galleryapp"
       fi;
       if git diff HEAD~ --name-only | egrep 'jupyterhub/config.yaml|jupyterhub/_secret.yaml'; then
