efk fix for a worker where docker dir is not the default one

--- a/monitoring/efk_stack/config.yaml
+++ b/monitoring/efk_stack/config.yaml
@@ -69,6 +69,15 @@ fluentd-elasticsearch:
     # better use default prefix "logstash"
     # Kibana-dashboards.json also uses it
     #logstash_prefix: 'orc-logstash'
+  # we have to mount this for main worker, there we have docker data dir not in default path (/var/lib/docker) but under /ssd/docker
+  extraVolume:
+    - name: custom_varlibdockercontainers
+      hostPath:
+        path: /ssd/docker/containers
+  extraVolumeMounts:
+    - name: custom_varlibdockercontainers
+      mountPath: /ssd/docker/containers
+      readOnly: true
 
 #  secret:
 #  # - name: ELASTICSEARCH_PASSWORD
