--- a/nfs_provisioner/backup/cron_job.yaml
+++ b/nfs_provisioner/backup/cron_job.yaml
@@ -32,6 +32,8 @@ spec:
                 value: "/export"
               - name: BACKUP_FOLDER
                 value: "/backup"
+              - name: MAX_WORKERS
+                value: "7"
             volumeMounts:
               - name: export-volume
                 mountPath: /export
