rm some nodeselectors, these pods dont need to be on specific node, because they dont depend on nfs or database or docker images

--- a/binderhub/config.yaml
+++ b/binderhub/config.yaml
@@ -5,8 +5,8 @@ service:
   nodePort: 30081
 
 # deployment
-nodeSelector:
-  production: worker
+#nodeSelector:
+#  production: worker
 
 resources:
   requests:
@@ -136,8 +136,8 @@ jupyterhub:
         c.JupyterHub.authenticate_prometheus = False
 
   proxy:
-    nodeSelector:
-      production: worker
+#    nodeSelector:
+#      production: worker
     https:
       enabled: false
     service:
