--- a/jupyterhub/config.yaml
+++ b/jupyterhub/config.yaml
@@ -127,8 +127,8 @@ hub:
       memory: 2Gi
 
 proxy:
-  nodeSelector:
-    production: worker
+#  nodeSelector:
+#    production: worker
   https:
     enabled: false
   service:
