add JHUB_UNDER_MAINTENANCE variable

--- a/orc_site/deploy/orc-site-app.yaml
+++ b/orc_site/deploy/orc-site-app.yaml
@@ -47,6 +47,8 @@ spec:
           value:  "notebooks.gesis.org"
         - name: PRODUCTION_SERVER
           value: "true"
+        - name: JHUB_UNDER_MAINTENANCE
+          value: "false"
         resources:
           requests:
             cpu: "0.25"
