jhub maintenance (new storage)

--- a/nginx_shibboleth/nginx/k8s.conf
+++ b/nginx_shibboleth/nginx/k8s.conf
@@ -223,41 +223,13 @@ server {
     # Managing literal requests to the JupyterHub front end
     # with only a specific sub-path causes Shibboleth authentication.
     location /jupyter/ {
-        proxy_pass http://jhub;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # websocket headers
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
+        proxy_pass http://orc-site;
+        proxy_redirect     off;
 
-       # Shibboleth login
-       location = /jupyter/hub/login {
-            # Attributes from Shibboleth are introduced as headers by the FastCGI
-            # authorizer so we must prevent spoofing.
-            # The ``shib_clear_headers`` is a set of default header directives,
-            # available in the `includes/` directory in this repository.
-            include shib_clear_headers;
-            # Add here your own extra attributes to be cleared. They get introduced as headers
-            # by the FastCGI authorizer so we must prevent spoofing.
-            # Add *all* attributes that your application uses, including all variations.
-            more_clear_input_headers 'EPPN' 'mail' 'Email' 'DisplayName'
-                                     'Commonname' 'Givenname' 'sn' 'cn' 'persistent-id';
-
-            shib_request /shibauthorizer;
-            # include shib_fastcgi_params  # used for attributes as environment variables
-            shib_request_use_headers on;
-
-            # This backend application will receive Shibboleth variables as request
-            # headers (from Shibboleth's FastCGI authorizer)
-            proxy_pass http://jhub;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            # websocket headers
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-         }
+        proxy_set_header   Host                 $host;
+        proxy_set_header   X-Real-IP            $remote_addr;
+        proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto    $scheme;
     }
 
     # FastCGI authorizer for Auth Request module
