deploy binderhub-0.2.0-9f83710 with jupyter/repo2docker:10ac4d8 gallery: change mybinder.org url to mybinder federation url (https://my.bndr.it)

--- a/binderhub/config.yaml
+++ b/binderhub/config.yaml
@@ -53,7 +53,7 @@ config:
 
     use_registry: true
     image_prefix: gesiscss/orc-binder-
-    build_image: jupyter/repo2docker:25ebca04
+    build_image: jupyter/repo2docker:80b979f8
     per_repo_quota: 100
     build_node_selector:
       build: workers
@@ -79,6 +79,9 @@ config:
       # e.g. '^org/repo.*'
       - ^ines/spacy-binder.*
       - ^soft4voip/rak.*
+      - ^hmharshit/cn-ait.*
+      - ^shishirchoudharygic/mltraining.*
+      - ^hmharshit/mltraining.*
 
 extraConfig:
   templates: |
