--- a/jupyterhub/config_test.yaml
+++ b/jupyterhub/config_test.yaml
@@ -1,185 +1,46 @@
-debug:
-  enabled: true
-
-hub:
-  service:
-    annotations:
-      prometheus.io/scrape: 'false'
-  baseUrl: /jupyter/
-  nodeSelector:
-    production: worker
-  image:
-    name: gesiscss/k8s-hub-orc
-    tag: "1edbd1d"
-  deploymentStrategy:
-    type: RollingUpdate
-  db:
-    type: postgres
-  extraConfig:
-    orc: |
-      c.Authenticator.shibboleth_logout_url = 'https://notebooks-test.gesis.org/Shibboleth.sso/Logout?return=https://notebooks-test.gesis.org/'
-      c.JupyterHub.redirect_to_server = False
-      c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org/jupyter/'
-      if "cookie_options" in c.JupyterHub.tornado_settings:
-        c.JupyterHub.tornado_settings["cookie_options"].update({"secure": True})
-      else:
-        c.JupyterHub.tornado_settings["cookie_options"] = dict(secure=True)
-    templates: |
-      c.JupyterHub.template_paths = ['/srv/jhub_custom_templates']
-      staging = True
-      production = False
-      site_url = 'https://notebooks{}.gesis.org'.format('-test' if staging else '')
-      context = {
-          'staging': staging,
-          'production': production,
-          'version': 'beta',
-          # 'shibboleth_entityID': f'{site_url}/shibboleth',
-
-          'home_url': '/',
-          'jhub_url': '/jupyter/',
-          # 'logout_url': '/jupyter/hub/logout',
-          'gesis_login_url': f'{site_url}/Shibboleth.sso/Login?SAMLDS=1&'
-                             f'target={site_url}/hub/login&'
-                             f'entityID=https%3A%2F%2Fidp.gesis.org%2Fidp%2Fshibboleth',
-          'bhub_url': '/binder/',
-          'about_url': '/about/',
-          'tou_url': '/terms_of_use/',
-          'imprint_url': 'https://www.gesis.org/en/institute/imprint/',
-          'data_protection_url': 'https://www.gesis.org/en/institute/data-protection/',
-          'gesis_url': 'https://www.gesis.org/en/home/',
-          'gallery_url': '/gallery/'
-          # 'help_url': 'https://www.gesis.org/en/help/',
-      }
-      context.update({'active': 'jupyterhub'})
-      c.JupyterHub.template_vars = context
-    admin_handler: |
-      from jupyterhub.handlers.base import BaseHandler
-      from jupyterhub.utils import admin_only
-      from jupyterhub import orm
-      class OrcAdminHandler(BaseHandler):
-        """Render the admin page."""
-        @admin_only
-        async def get(self):
-            available = {'name', 'admin', 'running', 'last_activity'}
-            default_sort = ['last_activity']
-            mapping = {
-                'running': orm.Spawner.server_id,
-            }
-            for name in available:
-                if name not in mapping:
-                    mapping[name] = getattr(orm.User, name)
-
-            default_order = {
-                'name': 'asc',
-                'last_activity': 'desc',
-                'admin': 'desc',
-                'running': 'desc',
-            }
-
-            sorts = self.get_arguments('sort') or default_sort
-            orders = self.get_arguments('order')
-
-            for bad in set(sorts).difference(available):
-                self.log.warning("ignoring invalid sort: %r", bad)
-                sorts.remove(bad)
-            for bad in set(orders).difference({'asc', 'desc'}):
-                self.log.warning("ignoring invalid order: %r", bad)
-                orders.remove(bad)
-
-            # add default sort as secondary
-            for s in default_sort:
-                if s not in sorts:
-                    sorts.append(s)
-            if len(orders) < len(sorts):
-                for col in sorts[len(orders):]:
-                    orders.append(default_order[col])
-            else:
-                orders = orders[:len(sorts)]
-
-            # this could be one incomprehensible nested list comprehension
-            # get User columns
-            cols = [ mapping[c] for c in sorts ]
-            # get User.col.desc() order objects
-            ordered = [ getattr(c, o)() for c, o in zip(cols, orders) ]
-
-            users = self.db.query(orm.User).outerjoin(orm.Spawner).order_by(*ordered)
-            users = [ self._user_from_orm(u) for u in users ]
-            running = [ u for u in users if u.running ]
-            for user in users:
-                auth_state = await user.get_auth_state()
-                auth_state = auth_state or {}
-                setattr(user, 'gn', auth_state.get('Givenname', ''))
-                setattr(user, 'sn', auth_state.get('sn', ''))
-
-            html = self.render_template('admin.html',
-                user=self.get_current_user(),
-                admin_access=self.settings.get('admin_access', False),
-                users=users,
-                running=running,
-                sort={s:o for s,o in zip(sorts, orders)},
-            )
-            self.finish(html)
-      c.JupyterHub.extra_handlers = [(r'/admin_orc', OrcAdminHandler),]
-  resources:
-    requests:
-      cpu: "0.25"
-      memory: 512Mi
-    limits:
-      cpu: "0.5"
-      memory: 1Gi
-
-proxy:
-#  nodeSelector:
-#    staging: worker
-  https:
-    enabled: false
-  service:
-    type: NodePort
-    nodePorts:
-      http: 30180
-  chp:
-    resources:
-      requests:
-        cpu: "0.1"
-        memory: 256Mi
-      limits:
-        cpu: "0.5"
-        memory: 512Mi
-
-auth:
-  type: custom
-  custom:
-    className: "jhub_shibboleth_auth.shibboleth_auth.ShibbolethAuthenticator"
-  admin:
-    access: true
-    users: ['kenan.erdogan@gesis.org', 'arnim.bleier@gesis.org']
-  state:
+jupyterhub:
+  debug:
     enabled: true
 
-singleuser:
-  nodeSelector:
-    user: workers
-  storage:
-    capacity: 25Gi
-  image:
-    name: gesiscss/singleuser-orc
-    tag: "r2d-91fe4c6"
-  cpu:
-    guarantee: 0.1
-    limit: 0.5
-  memory:
-    guarantee: 512M
-    limit: 512M
-  extraEnv:
-    # settings for kernel culling
-    # to be used in binderhub/appendix/extra_notebook_config.py
-    CULL_CONNECTED: '1'
-    CULL_TIMEOUT: '600'
-    CULL_KERNEL_TIMEOUT: '600'
-    CULL_INTERVAL: '60'
-cull:
-  # cull every 11 minutes so it is out of phase
-  every: 660
-  timeout: 600
-  # maxAge is 6 hours: 6 * 3600 = 21600
-  maxAge: 21600
+  hub:
+    service:
+      annotations:
+        prometheus.io/scrape: 'false'
+    extraConfig:
+      010-orc: |
+        c.Authenticator.shibboleth_logout_url = 'https://notebooks-test.gesis.org/Shibboleth.sso/Logout?return=https://notebooks-test.gesis.org/'
+        c.JupyterHub.bind_url = 'https://notebooks-test.gesis.org/jupyter/'
+      020-templates: |
+        staging = True
+        production = False
+    resources:
+      requests:
+        cpu: "0.25"
+        memory: 512Mi
+      limits:
+        cpu: "0.5"
+        memory: 1Gi
+
+  proxy:
+    service:
+      nodePorts:
+        http: 30180
+    chp:
+      resources:
+        requests:
+          cpu: "0.1"
+          memory: 256Mi
+        limits:
+          cpu: "0.5"
+          memory: 512Mi
+
+  singleuser:
+    storage:
+      # has no effect when using nfs: this is a min limit not a max
+      capacity: 5Gi
+    cpu:
+      guarantee: 0.1
+      limit: 0.5
+    memory:
+      guarantee: 512M
+      limit: 512M
