update nginx configs, so it ignores fonts of bhun and jhub use jupyter/repo2docker:f19e159d in bhub use gesiscss/singleuser-orc:r2d-394ccfb in jhub

--- a/nginx_shibboleth/nginx/k8s_test.conf
+++ b/nginx_shibboleth/nginx/k8s_test.conf
@@ -209,13 +209,17 @@ server {
         fastcgi_pass unix:/var/run/shibboleth/shibresponder.sock;
     }
 
-    ## ignore fonts of JupyterHub and BinderHub (they not found anyway when base url is different than /)
-    #location ~* ^/jupyter/hub/static/fonts/.+\.(woff|woff2|ttf)$
-    #{
-    #    return 404;
-    #}
-    #location ~* ^/static/dist/.+\.(woff|woff2|ttf)$
-    #{
-    #    return 404;
-    #}
+    # JupyterHub's style.min.css looks for fonts files in wrong folder
+    # dont rewrite and fix the path because we dont want to use these fonts
+    location ~* ^/jupyter/hub/static/fonts/.+\.(woff|woff2|ttf)$
+    {
+        return 404;
+        #rewrite ^/jupyter/hub/static/fonts/(.*)$ /jupyter/hub/static/components/bootstrap/fonts/$1 last;
+    }
+    # ignore fonts of BinderHub (they are not found anyway when base url is different than /)
+    # dont rewrite and fix the path because we dont want to use these fonts
+    location ~* ^/static/dist/.+\.(woff|woff2|ttf)$
+    {
+        return 404;
+    }
 }
